welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: value lenght is not a member of Array[Int]
  var max3:Int = nums(nums.lenght-1)
                           ^max2Value:6: error: value lenght is not a member of Array[Int]
  var max4:Int = nums(nums.lenght-1)
                           ^